--- a/src/Site/MainBundle/Resources/views/Frontend/Products/index.html.twig
+++ b/src/Site/MainBundle/Resources/views/Frontend/Products/index.html.twig
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="{{ asset('bundles/sitemain/frontend/styles/children.css') }}">
 {% endblock %}
 
+{% block top %}
+    <div class="wrap-video">
+        <div class="video" id="video"></div>
+    </div>
+{% endblock %}
+
 {% block content %}
     <div class="container">
 
