--- a/src/Site/MainBundle/Resources/views/Frontend/layout.html.twig
+++ b/src/Site/MainBundle/Resources/views/Frontend/layout.html.twig
@@ -18,6 +18,8 @@
 {% endblock %}
 
 {% block body %}
+    {% block top %}
+    {% endblock %}
     <!-- Шапка -->
     <header>
         <div class="header-top">
