--- a/src/Site/MainBundle/Resources/views/Frontend/layout.html.twig
+++ b/src/Site/MainBundle/Resources/views/Frontend/layout.html.twig
@@ -99,9 +99,12 @@
     <script src="{{ asset('bundles/sitemain/frontend/bower_components/bootstrap/js/tab.js') }}"></script>
     <script src="{{ asset('bundles/sitemain/frontend/bower_components/vide/dist/jquery.vide.min.js') }}"></script>
     <script src="{{ asset('bundles/sitemain/frontend/bower_components/slick.js/slick/slick.min.js') }}"></script>
+    <script src="{{ asset('bundles/sitemain/frontend/bower_components/sticky/jquery.sticky.js') }}"></script>
+    <script src="{{ asset('bundles/sitemain/frontend/bower_components/imagesloaded/imagesloaded.pkgd.min.js') }}"></script>
     <!-- endbuild -->
 
     <!-- build:js({app,.tmp}) scripts/main.js -->
+    <script src="{{ asset('bundles/sitemain/frontend/scripts/jquery.ripples.js') }}"></script>
     <script src="{{ asset('bundles/sitemain/frontend/scripts/main.js') }}"></script>
     <!-- endbuild -->
 {% endblock %}
