--- a/src/Site/MainBundle/Resources/public/frontend/styles/main.css
+++ b/src/Site/MainBundle/Resources/public/frontend/styles/main.css
@@ -87,7 +87,7 @@ header .head2 .logo a {
   display: inline-block;
   height: 101px;
   width: 180px;
-  background: url("../images/aqua-logo.png") no-repeat;
+  background: url("../images/aqua-logo.gif") no-repeat;
   border: 0px;
 }
 /* line 77, ../sass/main.sass */
